[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://models/worlds/grassland/Background parts/_Complete_static_BG_(288 x 208).png" type="Texture" id=2]
[ext_resource path="res://models/worlds/grassland/Background parts/5 - Sky_color.png" type="Texture" id=3]
[ext_resource path="res://scripts/menu_interface/aboutScreen.gd" type="Script" id=4]
[ext_resource path="res://sounds/blipSelect.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=6]

[sub_resource type="TileSet" id=27]
0/name = "_Complete_static_BG_(288 x 208).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 288, 192 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "_Complete_static_BG_(288 x 208).png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 288, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "_Complete_static_BG_(288 x 208).png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 288, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "5 - Sky_color.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 288, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 48
outline_color = Color( 1, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=16]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 28 )
Button/styles/focus = SubResource( 29 )
Button/styles/hover = SubResource( 30 )
Button/styles/normal = SubResource( 31 )
Button/styles/pressed = SubResource( 32 )

[sub_resource type="DynamicFont" id=17]
size = 21
outline_size = 2
outline_color = Color( 0, 0.619608, 0.760784, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
position = Vector2( 544, 316 )
rotation = 0.0122173
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -0.721242

[node name="TileMap" type="TileMap" parent="Control"]
position = Vector2( -544.883, -316.202 )
tile_set = SubResource( 27 )
format = 1
tile_data = PoolIntArray( 65532, 3, 0, 0, 3, 0, 4, 3, 0, 8, 3, 0, 12, 3, 0, 16, 3, 0, 262140, 3, 0, 196608, 3, 0, 196612, 3, 0, 196616, 3, 0, 196620, 3, 0, 196624, 3, 0, 458748, 1, 0, 393216, 1, 0, 393220, 1, 0, 393224, 1, 0, 393228, 1, 0, 393232, 1, 0, 589820, 2, 0, 524288, 2, 0, 524292, 2, 0, 524296, 2, 0, 524300, 2, 0, 524304, 2, 0 )

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -491.916
margin_top = -226.182
margin_right = 468.084
margin_bottom = -96.1824
custom_colors/font_color = Color( 0.886275, 0.894118, 0.788235, 1 )
custom_colors/font_outline_modulate = Color( 0.247059, 0.0666667, 0.898039, 1 )
custom_colors/font_color_shadow = Color( 0.117647, 0.419608, 0.709804, 1 )
custom_fonts/font = SubResource( 20 )
text = "Jogo criado para a disciplina de 
Projeto de Sistemas do curso de 
Ciência da Computação da Universidade Federal do Tocantins, 
utilizando Godot Engine. 
Com o objetivo de ser um jogo educativo 
que possa ser utilizado em aparelhos TVBOX.
"
align = 1
valign = 1

[node name="screenName" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -505.889
margin_top = -299.188
margin_right = 454.111
margin_bottom = -248.188
rect_min_size = Vector2( 650, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
text = "SOBRE"
align = 1
valign = 1

[node name="controls" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.973
margin_top = -72.0627
margin_right = 146.027
margin_bottom = 71.9373
custom_constants/separation = 20

[node name="codebase_btn" type="Button" parent="Control/controls"]
margin_right = 315.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../exit_btn")
theme = SubResource( 16 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 17 )
text = "CODIGO FONTE"

[node name="dev_list" type="Button" parent="Control/controls"]
margin_top = 41.0
margin_right = 315.0
margin_bottom = 62.0
theme = SubResource( 16 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 17 )
text = "DESENVOLVEDORES"

[node name="return_btn" type="Button" parent="Control/controls"]
margin_top = 82.0
margin_right = 315.0
margin_bottom = 103.0
theme = SubResource( 16 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 17 )
text = "VOLTAR"

[node name="exit_btn" type="Button" parent="Control/controls"]
margin_top = 123.0
margin_right = 315.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../codebase_btn")
theme = SubResource( 16 )
custom_colors/font_color_focus = Color( 0.866667, 0.87451, 0.054902, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.0862745, 0.203922, 1 )
custom_fonts/font = SubResource( 17 )
text = "SAIR"

[node name="button_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="button_exit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_exited" from="Control/controls/codebase_btn" to="." method="on_button_exited"]
[connection signal="pressed" from="Control/controls/codebase_btn" to="." method="_on_codebase_btn_pressed"]
[connection signal="focus_exited" from="Control/controls/dev_list" to="." method="on_button_exited"]
[connection signal="pressed" from="Control/controls/dev_list" to="." method="_on_dev_list_pressed"]
[connection signal="focus_exited" from="Control/controls/return_btn" to="." method="on_button_exited"]
[connection signal="pressed" from="Control/controls/return_btn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="Control/controls/exit_btn" to="." method="_on_exit_btn_pressed"]
